--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@tailwindcss/vite": "^4.0.0",
-    "flowbite-react": "^0.10.2",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-type-animation": "^3.2.0",
-    "tailwindcss": "^4.0.0",
-    "tailwindcss-motion": "^1.0.1"
+    "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
