--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@tailwindcss/vite": "^4.0.0",
+    "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
