--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "bunx --bun vite",
-    "build": "tsc -b && vite build",
+    "build": "bun i --legacy-peer-deps && tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
