--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/react-scroll": "^1.8.10",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.3",
+    "react-router-dom": "^7.1.5",
+    "react-scroll": "^1.9.0",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^4.0.0"
   },
